
* Generalized Isar history, with support for linear undo, direct state
addressing etc.

* Recovered hiding of consts, which was accidentally broken in
Isabelle2007.  Potential INCOMPATIBILITY, ``hide const c'' really
makes c inaccessible; consider using ``hide (open) const c'' instead.

* Removed exotic 'token_translation' command.  INCOMPATIBILITY, use ML
interface instead.


*** Pure ***

* dropped "locale (open)".  INCOMPATBILITY.

* Command 'instance': attached definitions no longer accepted.
INCOMPATIBILITY, use proper 'instantiation' target.

* Keyword 'code_exception' now named 'code_abort'.  INCOMPATIBILITY.


*** Document preparation ***

* Antiquotation @{lemma} now imitates a regular terminal proof,
demanding keyword 'by' and supporting the full method expression
syntax just like the Isar command 'by'.


*** HOL ***

* HOL/Orderings: added class "preorder" as superclass of "order".  INCOMPATIBILITY:
Instantiation proofs for order, linorder etc. slightly changed.  Some theorems
named order_class.* now named preorder_class.*.

* HOL/Ring_and_Field and HOL/Divides: Definition of "op dvd" has been moved
to separate class dvd in Ring_and_Field;  a couple of lemmas on dvd has been
generalized to class comm_semiring_1.  Likewise a bunch of lemmas from Divides
has been generalized from nat to class semiring_div.  INCOMPATIBILITY.
This involves the following theorem renames resulting from duplicate elimination:

    dvd_def_mod ~>          dvd_eq_mod_eq_0
    zero_dvd_iff ~>         dvd_0_left_iff
    DIVISION_BY_ZERO_DIV ~> div_by_0
    DIVISION_BY_ZERO_MOD ~> mod_by_0
    mult_div ~>             div_mult_self2_is_id
    mult_mod ~>             mod_mult_self2_is_0

* HOL/Library/GCD: Curried operations gcd, lcm (for nat) and zgcd,
zlcm (for int); carried together from various gcd/lcm developements in
the HOL Distribution.  zgcd and zlcm replace former igcd and ilcm;
corresponding theorems renamed accordingly.  INCOMPATIBILY.  To